# university-tasks

./: .editorconfig  .gitignore
algorithms_and_prg/red_channel_histogram/: source.py
cpp/: hw1.cpp  hw2.cpp  hw3.cpp  smart_pointers_inheritance.cpp
data_science/multilayer_perception/: souce.py
homework-cpp/: CMakeLists.txt  main.cpp
homework-cpp/Catch_tests/: AbsoluteDateTest.cpp  CMakeLists.txt  ConverterTests.cpp
homework-cpp/Google_tests/: CMakeLists.txt  hw2_test.cpp  hw3_test.cpp
homework-cpp/hw11/: CMakeLists.txt  grammar.cpp  grammar.h  grammar.txt
homework-cpp/hw12/: CMakeLists.txt  grammar.cpp  grammar.h  grammar.txt  ps_automaton.cpp  ps_automaton.h  utils.cpp
homework-cpp/hw2/: CMakeLists.txt  hw2.cpp  hw2.h
homework-cpp/hw3/: CMakeLists.txt  hw3.cpp  hw3.h
homework-cpp/hw4/: CMakeLists.txt  hw4.cpp  hw4.h  scanner.cpp  scanner.h  scanner.hpp  token.cpp  token.hpp
numpy_tutorials/: randomwalk_test.py
numpy_tutorials/source/: ex10.py  ex9..py  examplePlot.py  game_of_life.py  markov_chain.py  scatter.py
prog/algorithms/: binary_search.py
prog/stepik_course/lab_2/: task1.py  task2.py  task3.py  task4.py  task5.py
prog/stepik_course/lab_5/: task1.py
rgr_tools/: main.py  txt.txt
task3_moon_shape/: main.py
task4_stopwatch/: main.py
task5_pingpong/: main.py  pdsad.py
task6_memory/: source.py
task7_blackjack/: source.py  utils.py
task8_asteroids/: source.py
